update ae2s version